applications/om-webserver-oneid/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/limit-connections: "20"
    nginx.ingress.kubernetes.io/limit-rps: "20"
  name: om-webserver-ingress
  namespace: om-webserver-oneid
spec:
  tls:
    - hosts:
        - omapi.osinfra.cn
      secretName: tls-secrets
  rules:
    - host: omapi.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: om-webserver-service
              servicePort: 80
            path: /oneid/

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/limit-connections: "400"
    nginx.ingress.kubernetes.io/limit-rps: "400"
    nginx.ingress.kubernetes.io/server-snippet: |
      rewrite ^/query/(.*)      https://dsapi.osinfra.cn/query/$1 redirect;
  name: om-webserver-rewrite-ingress
  namespace: om-webserver-oneid
spec:
  rules:
  - host: omapi.osinfra.cn
  tls:
  - hosts:
    - omapi.osinfra.cn
    secretName: tls-secrets
