applications/om-webserver-oneid/networkpolicy.yaml
---
kind: NetworkPolicy
metadata:
  name: om-webserver-policy-01
  namespace: om-webserver-oneid
spec:
  podSelector:
    matchLabels:
      app: om-webserver
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1
